@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-25 (opened March 10, 2011)
 
+	* ordilabel: gained argument 'xpd' to draw labels outside the plot
+	region. 
+
 	* ordisurf: got a formula interface as an alternative to define
 	the model. Also now accepts `gam()` argument `select` to add an
 	extra penalty to smooths so they can be penalized to zero (i.e.
